iframe scrollbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ html {
     display: none;
 }
 
+#element {
+    scrollbar-width: none;
+}
+
 /* HEADER____________________________________________________________________________________________________________*/
 header {
     /* border-bottom: 2.5px rgba(255, 255, 255, 0.25) solid; */
@@ -121,7 +125,7 @@ header {
     top: 0;
     left: 0;
     background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.75);
     overflow-x: hidden;
     transition: 0.5s;
 }
